--- a/Notes/Unit4/Unit4.tex
+++ b/Notes/Unit4/Unit4.tex
@@ -312,15 +312,16 @@
     \item Mechanism (for generic catalyzed hydrogenation):
     \begin{figure}[h!]
         \centering
+        \setchemfig{arrow style={blx,semithick}}
         \begin{subfigure}[b]{0.45\linewidth}
             \centering
             \schemestart
                 \chemfig{M(-[1]H)(-[7]H)}
-                \arrow{->[\small\chemfig{[:45]=}]}
+                \arrow{->[\footnotesize\chemfig[atom sep=1.4em]{=[1]}]}
                 \chemfig{M(-[7]H)(-[1]H)(-[2]\phantom{i}-[4,0.4,,,white]=)}
                 \arrow[-90]
                 \chemfig{M(-[7]H)(-[:30]-[:-30])}
-                \arrow{-U>[][*{0.90}\small\chemfig{[:45]-}][][][90]}[180]
+                \arrow{-U>[][*{0.90}\footnotesize\hbox{\chemfig[atom sep=1.4em]{-[1]}}][][][90]}[180]
                 \chemfig{M^{\mathit{n}-2}}
                 \arrow{->[*{0}\small\ce{H2}]}[90,1.3]
             \schemestop
@@ -331,13 +332,13 @@
             \centering
             \schemestart
                 \chemfig{M-H}
-                \arrow{->[\small\chemfig{[:45]=}]}
+                \arrow{->[\footnotesize\chemfig[atom sep=1.4em]{=[1]}]}
                 \chemfig{M(-H)(-[2]\phantom{i}-[4,0.4,,,white]=)}
                 \arrow[-90]
                 \chemfig{M-[:30]-[:-30]}
                 \arrow{->[\small\ce{H2}]}[180]
                 \chemfig{M(-[6]H)(-[7]H)(-[:30]-[:-30])}
-                \arrow{-U>[][*{0}\small\chemfig{[:45]-}][][][120]}[90]
+                \arrow{-U>[][*{0}\footnotesize\hbox{\chemfig[atom sep=1.4em]{-[1]}}][][][120]}[90]
             \schemestop
             \caption{Monohydride mechanism.}
             \label{fig:mechanism-hydrogenationb}
@@ -400,7 +401,7 @@
         \centering
         \schemestart
             \chemfig{Cp_2Lu-H}
-            \arrow{->[\small\chemfig{R-[:30]=[:-30]}]}[,1.5]
+            \arrow{->[\footnotesize\chemfig[atom sep=1.4em]{R-[:30]=_[:-30]}]}[,1.5]
             \chemleft{[}
                 \chemfig{Cp_2Lu?-[,,,,dashed]H-[6,,,,dashed]C(-[:-60]R)(-[:15]H)-[4,1.12]C?[,,dashed](<[:-110]H)(>:[:-150]H)}
             \chemright{]^\ddagger}
@@ -410,7 +411,7 @@
             \chemleft{[}
                 \chemfig{Cp_2Lu?-[,,,,dashed](-[:45]-[::-60]R)-[6,,,,dashed]H-[4,0.92,,,dashed]H?[,,dashed]}
             \chemright{]^\ddagger}
-            \arrow{-U>[][*{0.20}\small\chemfig{R-[:30]-[:-30]}][][][135]}[90,1.3]
+            \arrow{-U>[][*{0.20}\footnotesize\hbox{\chemfig[atom sep=1.4em]{R-[:30]-[:-30]}}][][][135]}[90,1.3]
         \schemestop
         \begin{tikzpicture}[remember picture,overlay]
             \draw [dashed] (-2.4,0.15) -- ++(0.6,0);
@@ -429,7 +430,7 @@
     \end{itemize}
     \item Radical hydrogenation.
     \begin{equation*}
-        \ce{L_nM-H + Ph-= -> L_nM* + Ph-*= -> L_nM-CHMePh ->[H2] -> L_nM-H + Ph--}
+        \ce{L_nM-H + Ph-= -> L_nM* + Ph-*- -> L_nM-CHMePh ->[H2] -> L_nM-H + Ph--}
     \end{equation*}
     \begin{itemize}
         \item This can happen with porphyrins and \ce{HMn(CO)5}.
@@ -481,8 +482,9 @@
                 \arrow{0}[,0]\+{0.7em,,1.5em}
                 \chemfig{-[:30](-[2]OH)-[:-30]}
             \schemestop\\[1em]
+            \chemmove{\draw ([yshift=-4mm]c4.south) -- (c4.south |- 0,0) -- node[above]{\small\ce{H2}} (c1.south |- 0,0) -- ([yshift=-4mm]c1.south);}
             \begin{tikzpicture}
-                \draw [-stealth] (4.7,0) -- (4.7,-1) -- node[above]{\small\ce{H2}} (-4.7,-1) -- (-4.7,0);
+                \path (0,0) -- (0,-1);
             \end{tikzpicture}
             \caption{Ionic.}
             \label{fig:noyorisCatalystMechb}
@@ -569,41 +571,6 @@
         \ce{CH3OH + CO ->[Rh(CO)2I2-][{30-$\SI{40}{atm}$, $\SI{180}{\celsius}$}] Me-COOH}
     \end{equation*}
     \item Mechanism:
-    % \begin{figure}[h!]
-    %     \centering
-    %     \begin{tikzpicture}
-    %         \node (1) at (90:3) {\chemfig{Rh(-[1]I)(-[3]OC)(-[5]OC)(-[7]I)}};
-    %         \node (2) at (-30:3) {\chemfig{Rh(-I)(>:[1]I)(-[2]Me)(-[4]OC)(<[5]OC)(-[6]I)}}
-    %             ([xshift=2mm,yshift=2mm]2.north) edge [blx,semithick,stealth-,bend right=30] ([yshift=-3mm]1.east)
-    %         ;
-    %         \node (3) at ([xshift=-4mm]-150:3) {\chemfig{Rh(-I)(>:[1]I)(-[2]CO)(-[4](=[:120]O)-[:-120])(<[5]OC)(-[6]I)}}
-    %             edge [blx,semithick,stealth-,bend right=32] node[black,below]{\small\ce{CO}} (2)
-    %             ([xshift=2mm,yshift=2mm]3.north)edge [blx,semithick,-stealth,bend left=30] ([yshift=-3mm]1.west)
-    %         ;
-    
-    %         \node (4) at (135:5) {\chemfig{-[:30](=[2]O)-[:-30]I}}
-    %             edge [blx,semithick,stealth-,out=-90,in=80] (170:2.78)
-    %         ;
-    %         \node (5) at (90:5) {\ce{HI}}
-    %             edge [blx,semithick,stealth-,bend right=20] ([xshift=4.5mm,yshift=4.5mm]4.center)
-    %         ;
-    %         \node (6) at (45:5) {\ce{MeI}}
-    %             edge [blx,semithick,stealth-,bend right=20] (5)
-    %             edge [blx,semithick,out=-90,in=100] (10:2.79)
-    %         ;
-    
-    %         \node (7) at (-4.5,5) {\ce{H2O}};
-    %         \node (8) at (-1,7) {\chemfig{-[:30](=[2]O)-[:-30]OH}}
-    %             edge [blx,semithick,stealth-,bend left=50,looseness=1.33] (7)
-    %         ;
-    %         \node (9) at (1,6.3) {\ce{MeOH}};
-    %         \node (10) at (4.5,5) {\ce{H2O}}
-    %             edge [blx,semithick,stealth-,bend left=50,looseness=1.23] (9)
-    %         ;
-    %     \end{tikzpicture}
-    %     \caption{Carbonylation mechanism.}
-    %     \label{fig:mechanism-carbonylation}
-    % \end{figure}
     \begin{figure}[h!]
         \centering
         \begin{tikzpicture}
@@ -732,7 +699,7 @@
     \begin{figure}[h!]
         \centering
         \schemestart
-            \chemfig{R-[:30]=[:-30]}
+            \chemfig{R-[:30]=_[:-30]}
             \arrow{->[\small\ce{\color{rex}H2\color{black}, CO}][\footnotesize 120-$\SI{180}{\celsius}$, 200-$\SI{300}{atm}$]}[,2.4]
             \chemfig{R-[:30](-[2]\textcolor{rex}{H})-[:-30]-[:30](=[2]O)-[:-30]\textcolor{rex}{H}}
             \arrow{0}[,0]\+{,,2.3em}
@@ -768,17 +735,17 @@
             \chemfig{Co(-CO)(-[2]H)(>:[:160]OC)(<[:-150]OC)(-[6]CO)}
             \arrow{<=>[][*{0}\small\ce{CO}]}[-90]
             \chemfig{Co(-CO)(-[2]H)(-[4]OC)(-[6]CO)}
-            \arrow(--b){<=>[\small\chemfig{-[:30]=_[:-30]}]}[,1.3]
+            \arrow(--b){<=>[\footnotesize\chemfig[atom sep=1.4em]{-[:30]=_[:-30]}]}
             \chemfig{Co(-\phantom{i}-[2,0.4,,,white]=^[6]-[:-30])(-[2]H)(>:[:160]OC)(<[:-150]OC)(-[6]CO)}
             \arrow{<=>[*{0}\footnotesize\ce{$1,2$}]}[-90,1.1]
             \chemfig{Co(-Pr)(-[2]CO)(-[4]OC)(-[6]CO)}
             \arrow{<=>[*{0}\small\ce{CO}]}[-90,1.1]
             \chemfig{Co(-CO)(-[2]Pr)(>:[:160]OC)(<[:-150]OC)(-[6]CO)}
-            \arrow{<=>}[180,1.3]
+            \arrow{<=>}[180]
             \chemfig{Co(-(=[:-60]O)(-[:60]Pr))(-[2]CO)(-[4]OC)(-[6]CO)}
             \arrow{->[*{0}\small\ce{H2}]}[90]
             \chemfig{Co(>:[:25]CO)(-[2](=[:150]O)-[:30]Pr)(>:[:155]H)(<[:-155]H)(-[6]CO)(<[:-25]CO)}
-            \arrow{-U>[][*{0}\small\chemfig{-[:30]-[:-30]-[:30](=[2]O)-[:-30]H}][][][120]}[90]
+            \arrow{-U>[][*{0}\footnotesize\hbox{\chemfig[atom sep=1.4em]{-[:30]-[:-30]-[:30](=[2]O)-[:-30]H}}][][][120]}[90]
             \arrow(@b--){<=>[\footnotesize\ce{$2,1$}]}
             \chemfig{Co(-(-[:60])-[:-60])(-[2]CO)(-[4]OC)(-[6]CO)}
             \arrow{->[$\longrightarrow$][$\longrightarrow$]}[-90]
