--- a/preamble.tex
+++ b/preamble.tex
@@ -41,7 +41,7 @@
 
 \DeclareSIUnit{\angstrom}{\textup{\AA}}
 
-\setchemfig{atom sep=2em,fixed length=true,bond offset=3pt,cram width=3pt}
+\setchemfig{atom sep=2em,fixed length=true,bond offset=3pt,cram width=3pt,arrow style={blx,semithick}}
 
 \usetikzlibrary{decorations.markings,backgrounds,arrows.meta}
 \colorlet{blx}{blue!40!black!80}
